<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.brendaperez.sumas.NivelSuma">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        tools:context="com.example.brendaperez.sumas.NivelSuma">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/leftSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.brendaperez.sumas.NivelSuma">

            <ImageView
                android:id="@+id/bee9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/bee"
                android:src="@drawable/lion" />

            <ImageView
                android:id="@+id/bee8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/bee"
                android:src="@drawable/lion" />

        </LinearLayout>

        <ImageView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/plus"
            android:src="@drawable/plus" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/rightSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.brendaperez.sumas.NivelSuma">

            <ImageView
                android:id="@+id/bee4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/bee"
                android:src="@drawable/lion" />

            <ImageView
                android:id="@+id/bee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/bee"
                android:src="@drawable/lion" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:contentDescription="@string/question"
        android:src="@drawable/question"
        android:visibility="visible" />

    <TextView
        android:id="@+id/bravo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bravoSum"
        android:textAlignment="center"
        android:textColor="#7fde20"
        android:textSize="30sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        tools:context="com.example.brendaperez.sumas.NivelSuma">

        <ImageView
            android:id="@+id/leftAnswer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="2"
            android:onClick="onClickAnswer"
            android:src="@drawable/two" />

        <ImageView
            android:id="@+id/centerAnswer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="4"
            android:onClick="onClickAnswer"
            android:src="@drawable/four" />

        <ImageView
            android:id="@+id/rightAnswer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="9"
            android:onClick="onClickAnswer"
            android:src="@drawable/nine" />

    </LinearLayout>
</LinearLayout>




