<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="udlap.ingdesoft.math4us.Level1_1">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        tools:context="udlap.ingdesoft.math4us.Level1_1">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/leftSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="udlap.ingdesoft.math4us.Level1_1">

            <ImageView
                android:id="@+id/bee1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bee"
                android:src="@drawable/bee" />

            <ImageView
                android:id="@+id/bee2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/bee"
                android:src="@drawable/bee" />

            <ImageView
                android:id="@+id/bee3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bee"
                android:src="@drawable/bee" />

        </LinearLayout>

        <ImageView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/plus"
            android:src="@drawable/plus" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/rightSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="udlap.ingsoft.math4u.Level1">

            <ImageView
                android:id="@+id/bee4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/bee"
                android:src="@drawable/bee" />

            <ImageView
                android:id="@+id/bee5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:contentDescription="@string/bee"
                android:src="@drawable/bee" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:contentDescription="@string/question"
        android:src="@drawable/question"
        android:visibility="visible" />

    <TextView
        android:id="@+id/bravo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bravoSum"
        android:textAlignment="center"
        android:textColor="#7fde20"
        android:textSize="30sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        tools:context="udlap.ingsoft.math4u.Level1">

        <ImageView
            android:id="@+id/One"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="1"
            android:onClick="onClickAll"
            android:src="@drawable/one" />

        <ImageView
            android:id="@+id/Three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="3"
            android:onClick="onClickAll"
            android:src="@drawable/three" />

        <ImageView
            android:id="@+id/Five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="5"
            android:onClick="onClickAll"
            android:src="@drawable/five" />

    </LinearLayout>
</LinearLayout>




