<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.brendaperez.restas.NivelResta">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        tools:context="com.example.brendaperez.restas.NivelResta">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/leftRest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.brendaperez.restas.NivelResta">

            <ImageView
                android:id="@+id/octopus6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/octopus"
                android:src="@drawable/poni" />

            <ImageView
                android:id="@+id/octopus9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/octopus"
                android:src="@drawable/poni" />

            <ImageView
                android:id="@+id/octopus11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/octopus"
                android:src="@drawable/poni" />

            <ImageView
                android:id="@+id/octopus8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/octopus"
                android:src="@drawable/poni" />

            <ImageView
                android:id="@+id/octopus7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/octopus"
                android:src="@drawable/poni" />

        </LinearLayout>

        <ImageView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/minus"
            android:src="@drawable/minus" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/rightRest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.brendaperez.restas.NivelResta">

            <ImageView
                android:id="@+id/octopus13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/octopus"
                android:src="@drawable/poni" />

            <ImageView
                android:id="@+id/octopus15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/octopus"
                android:src="@drawable/poni" />

            <ImageView
                android:id="@+id/octopus14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/octopus"
                android:src="@drawable/poni" />

        </LinearLayout>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <ImageView
            android:id="@+id/thumb"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/plus"
            android:src="@drawable/thumbup"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bravo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bravo"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/bravoRest"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/thumb"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.666" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        tools:context="com.example.brendaperez.restas.NivelResta">

        <ImageView
            android:id="@+id/leftAnswer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="2"
            android:onClick="onClickAnswer"
            android:src="@drawable/two" />

        <ImageView
            android:id="@+id/centerAnswer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="8"
            android:onClick="onClickAnswer"
            android:src="@drawable/eight" />

        <ImageView
            android:id="@+id/rightAnswer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="3"
            android:onClick="onClickAnswer"
            android:src="@drawable/three" />

    </LinearLayout>
</LinearLayout>




